Added packets, nonworking, but game starts